--- a/index.html
+++ b/index.html
@@ -45,23 +45,39 @@
             const pickInfo = scene.pick(scene.pointerX, scene.pointerY);
             if (pickInfo.hit) {
                 const currentMesh = pickInfo.pickedMesh;
-                const newBox = currentMesh.clone();
-                newBox.position = currentMesh.position.clone();
+                switch (event.button) {
 
-                const diff = currentMesh.position.subtract(pickInfo.pickedPoint);
-                ['x', 'y', 'z'].forEach((dimension) => {
-                    if(diff[dimension] >= 0.5 - 0.001){
-                        newBox.position[dimension]--;
-                    }else
-                    if (diff[dimension] <= -0.5 + 0.001) {
-                        newBox.position[dimension]++;
-                    }
+                    case 0:
+                        const newBox = BABYLON.Mesh.CreateBox("box", 1, scene);
+                        newBox.position = currentMesh.position.clone();
 
-                });
+                        const diff = currentMesh.position.subtract(pickInfo.pickedPoint);
+                        ['x', 'y', 'z'].forEach((dimension) => {
+                            if (diff[dimension] >= 0.5 - 0.001) {
+                                newBox.position[dimension]--;
+                            }else
+                            if (diff[dimension] <= -0.5 + 0.001) {
+                                newBox.position[dimension]++;
+                            }
+                        });
+                        break;
+
+                    case 2:
+                        currentMesh.dispose();
+                        break;
+                }
+
             }
         }
-        canvas.addEventListener("pointerup", onPointerUp, false);
+        function onContextMenu(event){event.preventDefault()}
 
+        canvas.addEventListener("pointerup", onPointerUp, false);
+        canvas.addEventListener("contextmenu",onContextMenu, false);
+
+        scene.onDispose = function(){
+            canvas.removeEventListener("pointerup", onPointerUp);
+            canvas.removeEventListener("contextmenu", onContextMenu);
+        };
         return scene;
     }
 
