--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
 
 <canvas id="scene"></canvas>
 
-
-
 <script>
     var canvas = document.getElementById("scene");
     var engine = new BABYLON.Engine(canvas, true);
@@ -39,7 +37,14 @@
 
         const light = new BABYLON.HemisphericLight("hemi", new BABYLON.Vector3(0, 1, 1/2), scene);
 
+        const materialNormal = new BABYLON.StandardMaterial("material-normal", scene);
+        materialNormal.diffuseColor = new BABYLON.Color3(0.4, 0.4, 0.4);//Také bych mohl vyrobit barvu z hexadecimálního zápisu BABYLON.Color3.FromHexString("#666666");
+
+        const materialHover = new BABYLON.StandardMaterial("material-hover", scene);
+        materialHover.diffuseColor = new BABYLON.Color3(0.4, 1, 0.4);
+
         const box = BABYLON.Mesh.CreateBox("box", 1, scene);
+        box.material = materialNormal;
 
         function onPointerUp(event) {
             const pickInfo = scene.pick(scene.pointerX, scene.pointerY);
@@ -71,12 +76,31 @@
         }
         function onContextMenu(event){event.preventDefault()}
 
+        let lastMesh = null;
+        function onPointerMove(event) {
+            if (lastMesh) {
+                lastMesh.material = materialNormal;
+            }
+            const pickInfo = scene.pick(scene.pointerX, scene.pointerY);
+            if (pickInfo.hit) {
+                const currentMesh = pickInfo.pickedMesh;
+                currentMesh.material = materialHover;
+                lastMesh = currentMesh;
+            } else {
+                lastMesh = null;
+            }
+
+        }
+
+
         canvas.addEventListener("pointerup", onPointerUp, false);
         canvas.addEventListener("contextmenu",onContextMenu, false);
+        canvas.addEventListener("pointermove",onPointerMove, false);
 
         scene.onDispose = function(){
             canvas.removeEventListener("pointerup", onPointerUp);
             canvas.removeEventListener("contextmenu", onContextMenu);
+            canvas.removeEventListener("pointermove", onPointerMove);
         };
         return scene;
     }
