--- a/index.html
+++ b/index.html
@@ -8,16 +8,7 @@
     <!-- Babylon.js -->
     <script src="http://www.babylonjs.com/hand.minified-1.2.js"></script>
     <script src="http://www.babylonjs.com/babylon.js"></script>
-    <style>
-        #scene {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            touch-action: none;
-        }
-    </style>
+    <link rel="stylesheet" href="./src/style/index.css">
 </head>
 <body>
 
