uuid from cloudflare

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="http://www.babylonjs.com/babylon.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.6.0/redux.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/immutable/3.8.1/immutable.min.js"></script>
-    <script src="http://wzrd.in/standalone/uuid@latest"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/node-uuid/1.4.8/uuid.min.js"></script>
     <link rel="stylesheet" href="./src/style/index.css">
 </head>
 <body>
