loading and saving state from localStorage

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
 <body>
 
 <canvas id="scene"></canvas>
+<script src="./src/script/config.js"></script>
 <script src="./src/script/state/default-state.js"></script>
+<script src="./src/script/state/state-saver.js"></script>
+<script src="./src/script/state/create-state-from-uri.js"></script>
+<script src="./src/script/state/create-title-from-state.js"></script>
+<script src="./src/script/state/create-uri-from-state.js"></script>
 <script src="./src/script/state-reducers/state-reducer.js"></script>
 <script src="./src/script/scene/create-scene.js"></script>
 <script src="./src/script/scene/update-scene.js"></script>
