--- a/index.html
+++ b/index.html
@@ -2,28 +2,16 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Simple web game 0.3.0</title>
-    <!-- Babylon.js -->
+    <title>Simple web game</title>
+    <link rel="stylesheet" href="./dist/index.css">
     <script src="http://www.babylonjs.com/hand.minified-1.2.js"></script>
-    <script src="http://www.babylonjs.com/babylon.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.6.0/redux.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/immutable/3.8.1/immutable.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/node-uuid/1.4.8/uuid.min.js"></script>
-    <link rel="stylesheet" href="./src/style/index.css">
 </head>
 <body>
 
 <canvas id="scene"></canvas>
-<script src="./src/script/config.js"></script>
-<script src="./src/script/state/default-state.js"></script>
-<script src="./src/script/state/state-saver.js"></script>
-<script src="./src/script/state/create-state-from-uri.js"></script>
-<script src="./src/script/state/create-title-from-state.js"></script>
-<script src="./src/script/state/create-uri-from-state.js"></script>
-<script src="./src/script/state-reducers/state-reducer.js"></script>
-<script src="./src/script/scene/create-scene.js"></script>
-<script src="./src/script/scene/update-scene.js"></script>
-<script src="./src/script/browser.js"></script>
+
+<script src="./dist/browser.js"></script>
 </body>
 </html>
