Material design UI

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
+
   <title>Simple web game</title>
   <script src="http://www.babylonjs.com/hand.minified-1.2.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <style>
 </style>
